--- a/package.json
+++ b/package.json
@@ -9,13 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@base-org/account": "^2.5.1",
+    "@coinbase/wallet-sdk": "^4.3.7",
+    "@gemini-wallet/core": "^0.3.2",
+    "@json-rpc-tools/utils": "^1.7.6",
+    "@metamask/sdk": "^0.34.0",
     "@rainbow-me/rainbowkit": "^2.2.10",
+    "@safe-global/safe-apps-provider": "^0.18.6",
+    "@safe-global/safe-apps-sdk": "^9.1.0",
     "@tanstack/react-query": "^5.90.16",
+    "@walletconnect/ethereum-provider": "^2.23.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.26",
     "geist": "^1.5.1",
     "lucide-react": "^0.562.0",
+    "mipd": "^0.0.7",
     "next": "14.2.35",
+    "porto": "^0.2.37",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.5.0",
